updation after titanic

--- a/house sales in USA.ipynb
+++ b/house sales in USA.ipynb
@@ -1063,8 +1063,7 @@
     }
    ],
    "source": [
-    "sns.regplot(x='sqft_above',y='price',data=df)\n",
-    "plt.ylim(0,)"
+    "sns.regplot(x='sqft_above',y='price',data=df)\n"
    ]
   },
   {
